2002.12.18 TADA Tadashi <sho@spc.gr.jp>
	* conf.rhtml*: change theme gallery URL.

2002.12.16 TADA Tadashi <sho@spc.gr.jp>
	* dot.htaccess: add some comments about ErrorDocument.
	* 00default.rb: skip hidden diary in navi_user.

2002.12.15 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb, 00lang.en.rb: fix wrong title tag when NYEAR mode.

2002.12.13 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb, 00lang.en.rb: prev and next navi when NYEAR mode, more.
	* default.css: a little change in list elements.

2002.12.11 TADA Tadashi <sho@spc.gr.jp>
	* 00default.rb: prev and next navi when NYEAR mode.

2002.12.04 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/00default.rb: bugfix in navi_user.

2002.12.02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary1.css: convert for 1.5 or later.
	* misc/i18n/00lang.en.rb: add nyear labels.
	* update English documents. thanks Mizuho <gha@intrastore.cdc.com>.
	* add theme/base.css for basic styles.
	* footer.rhtml: move footer_proc before div.footer.

2002.12.02 Junichiro Kita <kita@kitaj.no-ip.com>
	* skel/diary.rhtml: let nyear into <span>.

2002.12.01 Junichiro Kita <kita@kitaj.no-ip.com>
	* doc/HOWTO-make-plugin.html: add about footer_proc.

2002.12.01 Junichiro Kita <kita@kitaj.no-ip.com>
	* merge from Test_NYEAR.

2002.11.26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.net -> tdiary.org.

2002.11.25 TADA Tadashi <sho@spc.gr.jp>
	* update documents. thanks Mizuho <gha@intrastore.cdc.com>.

2002.11.20 TADA Tadashi <sho@spc.gr.jp>
	* fix: bad last modified setting in CommentManager::add_comment.

2002.11.19 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: remove a debugging message.
	* defaultio.rb, pstoreio.rb: support Ruby 1.6.8 (ad hoc).
	* show.rhtml: make anchor name of section.

2002.11.18 TADA Tadashi <sho@spc.gr.jp>
	* remove Japanese char in diary.rhtml and 00lang.en.rb.
	* fix: setting default values in Config.
	* release 1.5.1.

2002.11.17 TADA Tadashi <sho@spc.gr.jp>
	* specify configuration value in deffault.