@@ -1,5 +1,6 @@
 2002.12.18 TADA Tadashi <sho@spc.gr.jp>
 	* conf.rhtml*: change theme gallery URL.
+	* tdiary.rb, index.rb: be able to change last modified from plugins.
 
 2002.12.16 TADA Tadashi <sho@spc.gr.jp>
 	* dot.htaccess: add some comments about ErrorDocument.
